# masterclass_monitoring_observability_mlops

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.gateway  Dockerfile.model  Dockerfile.streamlit
docker/grafana/provisioning/dashboards/: api-golden-signals.json  dashboard.yaml  observability-overview.json
docker/loki/: loki.yaml
docker/nginx/: nginx.conf
docker/otel/: collector.yaml
docker/prometheus/: prometheus.yml
docker/promtail/: promtail.yaml
docs/: architecture-base.md  masterclass-outline.md  monitoring-prometheus-grafana.md  observability-otel.md
src/masterclass_mlops/: __init__.py  bootstrap.py  config.py  database.py  model_logic.py  models.py  observability.py  repositories.py  schemas.py
src/masterclass_mlops/gateway/: app.py  dependencies.py  service.py
src/masterclass_mlops/model_service/: app.py
src/masterclass_mlops/streamlit_ui/: app.py
src/services/gateway/: app.py  dependencies.py  service.py
src/services/model_service/: __init__.py  app.py
src/shared/: __init__.py  bootstrap.py  config.py  database.py  metrics.py  models.py  observability.py  repositories.py  security.py
src/ui/: __init__.py
src/ui/streamlit/: app.py  grafana.py  tempo.py
tests/: conftest.py  test_docker_compose.py  test_monitoring_dashboard.py
tests/gateway/: test_auth.py  test_classify.py  test_monitoring.py  test_observability.py  test_repository.py
tests/model/: test_classifier.py  test_service.py
tests/streamlit/: test_grafana.py  test_tempo.py
(+1 files in other folders)
